# Root-Hiding-Module

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  build.gradle.kts  build.sh  settings.gradle.kts  update.json
.github/workflows/: build.yml
module/src/main/cpp/: CMakeLists.txt  main.cpp  symbol.map
module/template/: README.md  anti_detection.sh  config.sh  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  uninstall.sh  zygisk.json
module/template/webroot/: index.html  script.js  styles.css
webroot/: index.html  manifest.json
